--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
+    "@nuxtjs/tailwindcss": "^4.2.1",
     "core-js": "^3.15.1",
     "nuxt": "^2.15.7"
   },
@@ -29,8 +30,8 @@
     "@nuxtjs/eslint-config-typescript": "^6.0.1",
     "@nuxtjs/eslint-module": "^3.0.2",
     "@nuxtjs/stylelint-module": "^4.0.0",
-    "@nuxtjs/tailwindcss": "^4.2.0",
     "@vue/test-utils": "^1.2.1",
+    "autoprefixer": "^10.4.0",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^27.0.5",
     "eslint": "^7.29.0",
@@ -40,11 +41,13 @@
     "husky": "^6.0.0",
     "jest": "^27.0.5",
     "lint-staged": "^10.5.4",
-    "postcss": "^8.3.5",
+    "postcss": "^8.3.11",
     "prettier": "^2.3.2",
     "stylelint": "^13.13.1",
     "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-standard": "^22.0.0",
+    "tailwind": "^4.0.0",
+    "tailwindcss": "^2.2.19",
     "ts-jest": "^27.0.3",
     "vue-jest": "^3.0.4"
   }
