--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "eslint": "^7.29.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-nuxt": "^2.0.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^7.12.1",
     "husky": "^6.0.0",
     "jest": "^27.0.5",
@@ -45,6 +46,7 @@
     "prettier": "^2.3.2",
     "stylelint": "^13.13.1",
     "stylelint-config-prettier": "^8.0.2",
+    "stylelint-config-rational-order": "^0.1.2",
     "stylelint-config-standard": "^22.0.0",
     "tailwind": "^4.0.0",
     "tailwindcss": "^2.2.19",
