--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/tailwindcss": "^4.2.1",
+    "@vue/composition-api": "^1.4.0",
     "core-js": "^3.15.1",
     "nuxt": "^2.15.7"
   },
