--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "@nuxtjs/tailwindcss": "^4.2.1",
     "@vue/composition-api": "^1.4.0",
     "core-js": "^3.15.1",
-    "nuxt": "^2.15.7"
+    "nuxt": "^2.15.7",
+    "nuxt-property-decorator": "^2.9.1"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.14.7",
