--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@nuxtjs/eslint-module": "^3.0.2",
     "@nuxtjs/stylelint-module": "^4.0.0",
     "@types/tailwindcss": "^2.2.4",
+    "@vue/runtime-dom": "^3.2.26",
     "@vue/test-utils": "^1.2.1",
     "autoprefixer": "^10.4.0",
     "babel-core": "7.0.0-bridge.0",
