--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
+    "@nuxtjs/composition-api": "^0.31.0",
     "@nuxtjs/tailwindcss": "^4.2.1",
     "@vue/composition-api": "^1.4.0",
     "core-js": "^3.15.1",
     "nuxt": "^2.15.7",
-    "nuxt-property-decorator": "^2.9.1"
+    "nuxt-property-decorator": "^2.9.1",
+    "rfdc": "^1.3.0"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.14.7",
