--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "build": "cross-env NODE_ENV=\"production\" nuxt build",
     "start": "cross-env NODE_ENV=\"production\" nuxt start",
     "generate": "nuxt generate",
+		"hygen:model": "hygen core 01-models",
+		"hygen:repository": "hygen core 02-repositories",
     "lint:js": "eslint --ext \".js,.vue\" --ignore-path .gitignore .",
     "lint:style": "stylelint \"**/*.{vue,css}\" --ignore-path .gitignore",
     "prepare": "husky install",
@@ -47,6 +49,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^7.12.1",
     "husky": "^6.0.0",
+    "hygen": "^6.2.0",
     "jest": "^27.0.5",
     "lint-staged": "^10.5.4",
     "postcss": "^8.3.11",
