--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nuxtjs/composition-api": "^0.31.0",
     "@nuxtjs/tailwindcss": "^4.2.1",
     "@vue/composition-api": "^1.4.0",
+    "axios": "^0.27.2",
     "core-js": "^3.15.1",
     "nuxt": "^2.15.7",
     "nuxt-property-decorator": "^2.9.1",
