--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "core-js": "^3.15.1",
     "nuxt": "^2.15.7",
     "nuxt-property-decorator": "^2.9.1",
-    "rfdc": "^1.3.0"
+    "rfdc": "^1.3.0",
+    "cross-env": "^7.0.3"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.14.7",
@@ -43,7 +44,6 @@
     "autoprefixer": "^10.4.0",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^27.0.5",
-    "cross-env": "^7.0.3",
     "eslint": "^7.29.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-nuxt": "^2.0.0",
