[update] build command

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "cross-env NODE_ENV=\"development\" nuxt",
-    "build": "cross-env NODE_ENV=\"production\" nuxt generate",
+    "prod:build": "cross-env NODE_ENV=\"production\" nuxt build",
+    "prod:generate": "cross-env NODE_ENV=\"production\" nuxt generate",
     "start": "cross-env NODE_ENV=\"production\" nuxt start",
     "generate": "nuxt generate",
     "hygen:model": "hygen core 01-models",
