--- a/package.json
+++ b/package.json
@@ -21,22 +21,23 @@
     "*.{css,vue}": "stylelint --fix"
   },
   "dependencies": {
+    "@nuxt/types": "^2.15.7",
+    "@nuxt/typescript-build": "^2.1.0",
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/composition-api": "^0.31.0",
-    "@nuxtjs/tailwindcss": "^4.2.1",
-    "@nuxt/typescript-build": "^2.1.0",
-    "@nuxt/types": "^2.15.7",
     "@nuxtjs/eslint-config-typescript": "^6.0.1",
     "@nuxtjs/eslint-module": "^3.0.2",
     "@nuxtjs/stylelint-module": "^4.0.0",
+    "@nuxtjs/tailwindcss": "^4.2.1",
     "@vue/composition-api": "^1.4.0",
     "@vue/runtime-dom": "^3.2.26",
     "axios": "^0.27.2",
-    "core-js": "^3.15.1",
+    "core-js": "^3.23.4",
+    "cross-env": "^7.0.3",
     "nuxt": "^2.15.7",
     "nuxt-property-decorator": "^2.9.1",
-    "rfdc": "^1.3.0",
-    "cross-env": "^7.0.3"
+    "regenerator-runtime": "^0.13.9",
+    "rfdc": "^1.3.0"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.14.7",
