--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "private": true,
   "scripts": {
     "dev": "cross-env NODE_ENV=\"development\" nuxt",
+    "start": "nuxt start",
     "prod:build": "cross-env NODE_ENV=\"production\" nuxt build",
     "prod:generate": "cross-env NODE_ENV=\"production\" nuxt generate",
-    "start": "cross-env NODE_ENV=\"production\" nuxt start",
+    "dev:build": "cross-env NODE_ENV=\"development\" nuxt build",
+    "dev:generate": "cross-env NODE_ENV=\"development\" nuxt generate",
     "generate": "nuxt generate",
     "hygen:model": "hygen core 01-models",
     "hygen:repository": "hygen core 02-repositories",
