--- a/package.json
+++ b/package.json
@@ -38,11 +38,13 @@
     "cross-env": "^7.0.3",
     "nuxt": "^2.15.7",
     "nuxt-property-decorator": "^2.9.1",
+    "p5": "^1.4.2",
     "regenerator-runtime": "^0.13.9",
     "rfdc": "^1.3.0"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.14.7",
+    "@types/p5": "^1.4.2",
     "@types/tailwindcss": "^2.2.4",
     "@vue/test-utils": "^1.2.1",
     "autoprefixer": "^10.4.0",
