--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "*.{css,vue}": "stylelint --fix"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/vue-fontawesome": "^2.0.8",
     "@nuxt/types": "^2.15.7",
     "@nuxt/typescript-build": "^2.1.0",
     "@nuxtjs/axios": "^5.13.6",
@@ -31,6 +34,7 @@
     "@nuxtjs/eslint-module": "^3.0.2",
     "@nuxtjs/stylelint-module": "^4.0.0",
     "@nuxtjs/tailwindcss": "^4.2.1",
+    "@types/p5": "^1.4.2",
     "@vue/composition-api": "^1.4.0",
     "@vue/runtime-dom": "^3.2.26",
     "axios": "^0.27.2",
@@ -39,7 +43,6 @@
     "nuxt": "^2.15.7",
     "nuxt-property-decorator": "^2.9.1",
     "p5": "^1.4.2",
-    "@types/p5": "^1.4.2",
     "regenerator-runtime": "^0.13.9",
     "rfdc": "^1.3.0"
   },
