--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "axios": "^0.27.2",
     "core-js": "^3.23.4",
     "cross-env": "^7.0.3",
+    "dayjs": "^1.11.4",
     "nuxt": "^2.15.7",
     "nuxt-property-decorator": "^2.9.1",
     "p5": "^1.4.2",
